--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,15 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Experiences"
+    url: /experiences/
+  - title: "Learning"
+    url: /learning/
+  - title: "Music"
+    url: /music/
+  - title: "Projects"
+    url: /projects/
+  # - title: "Categories"
+  #   url: /categories/
+  # - title: "Tags"
+  #   url: /tags/
   - title: "About"
     url: /about/
